--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 		<img class="featured-image" src="Img/club.jpg" />
 
 </div>
-
-		
+<div class="car">
+<img src="img/car.jpg">	
+</div>
 
 </div>
 	
